--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -22,7 +22,7 @@
 
 <!-- ============================================================= -->
 
-<section>
+<section class="esport_section">
     <div class="top-esports-main">
         <div class="top-esports-col1">
             <h2> <b>Top eSports titles </b></h2>
