--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -26,12 +26,6 @@
   <section class="types_sports_sec">
     <div class="sports_type_row">
       <div class="sports_col_1">
-        <img
-          class="types_images"
-          src="assets/sirplay vrnl 10.webp"
-        />
-      </div>
-      <div class="sports_col">
         <h1 class="types_header">Types of sportsbook iframe</h1>
         <p class="type_para">
           The Sportsbook iFrame solutions are three and based on the channel
@@ -55,39 +49,40 @@
 
         <div class="white_back"></div>
       </div>
+      <div class="sports_col">
+
+        <img
+        class="types_images"
+        src="assets/sirplay vrnl 10.webp"
+      />
+      </div>
       
     </div>
   </section>
 
-  <!-- <section class="gaming_sec">
-    <div class="gaming_row">
-      <div class="gaming_col">
+  <section class="gaming_sec_iframe">
+    <div class="gaming_row_iframe">
+      <div class="gaming_col_iframe">
         <img
-          class="gaming_img"
+          class="gaming_img_iframe"
           src="assets/sirplay igaming.webp"
-          width="520"
-          height="280"
+         
         />
       </div>
-      <div class="gaming_col_2">
-        <h1 class="gaming_header">
+      <div class="gaming_col_2_iframe">
+        <h1 class="gaming_header_iframe">
           Sportsbook iFrame is suitable for land based Casinos
         </h1>
-        <p class="gaming_para">
-          The widest selection of entertainment games available online
-          <span class="white_change">White Label Casino </span> with more than
-          30,000 games.
+        <p class="gaming_para_iframe">
+          If you own a land-based casino and you would like to offer sports betting as well, our Sportsbook iFrame solution for terminals and kiosks will be the right choice since it will allow you to create cashiers accounts to manage the sports betting tickets sale.
         </p>
-        <p class="gaming_para">
-          Fast activation of multiple products and brands, suitable for FIAT
-          and <span class="white_change">Crypto casino software.</span>
-        </p>
+       
         <br />
         <br />
         <div class="white_back"></div>
       </div>
     </div>
-  </section> -->
+  </section> 
 
   <section class="types_sports_sec">
     <div class="sports_type_row">
@@ -111,6 +106,31 @@
         <img class="managed_images" src="assets/sirplay sportbook 1.webp" />
       </div>
     </div>
+  </section>
+
+  <section class="sports_iframes">
+<div class="sport_sol_row">
+  <div class="sport_sol_col">
+<img class="i-frame_img1" src="assets/sirplay vrnl 5_data.webp">
+  </div>
+  <div class="sport_sol_col_1">
+    <h1 class="header_iframes">To get the sportsbook iframe solution is very easy</h1>
+    <p class="gaming_para_iframe">
+      We’ve made it as easy as possible to activate the iFrame, just five steps:
+    </p>
+    <ol class="gaming_para_iframe">
+      <li>
+        Formalize the agreement between Sirplay and the customer.
+      </li>
+      <li>Start the sportsbook iFrame integration through APIs with our sdk.</li>
+      <li>
+        Meeting to define the sportsbook strategy to follow.
+      </li>
+      <li>Definition of most interesting sports and events by following your operating area.</li>
+      <li>Let’s go live!</li>
+    </ol>
+  </div>
+</div>
   </section>
 
   <section class="contact_sec">
@@ -195,5 +215,6 @@
       </div>
     </div>
   </section>
+
 
 <app-footer></app-footer>
