--- a/src/app/online-casino-software/online-casino-software.component.css
+++ b/src/app/online-casino-software/online-casino-software.component.css
@@ -69,3 +69,24 @@ background-color: #a0c528;
     color: white;
 }
 }
+.containt{
+    width: 1233px;
+    justify-content: center;
+    margin: 0 auto;
+    /* / padding: 80px 0; / */
+}
+@media (max-width: 1200px){
+.containt {
+    width: 1170px;
+}
+}
+@media (max-width: 992px){
+.containt {
+    width: 970px;
+}
+}
+@media (max-width: 768px){
+.containt {
+    width: 750px;
+}
+}
