--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<div class="containt">
 <section class="container1">
     <div class="container1_row">
       <div class="online-casino_col">
@@ -426,4 +427,5 @@
       </div>
     </div>
   </section>
+</div>
 <app-footer></app-footer>
