--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="containt">
+<div class="content">
 <section class="container1">
     <div class="container1_row">
       <div class="online-casino_col">
@@ -9,23 +9,16 @@
         >
           Online Casino Software
         </h1>
-        <p class="online-casino_para">
-          The <strong>online casino software</strong> is simple as our
-          platform is easy to manage plus you will be competitive by offering
-          <strong>thousands of casino games.</strong> Our staff will assist
-          you in all phases from initial training to production start-up.<br />
-        </p>
-
-        <p class="online-casino_para">
-          The marketing team will ensure that your online casino is featured
-          on the front page and we guarantee you high visibility online.<br />
-        </p>
-
-        <p class="online-casino_para">
-          The online casino platform will be delivered with ready-to-use games
-          moreover the monitoring tools will give you a clear view of the
-          progress of your new business.<br />
-        </p>
+        <div class="wpb_text_column wpb_content_element  vc_custom_1673977594688">
+          <div class="wpb_wrapper">
+            <p>The <strong>online casino software</strong> is simple as our platform is easy to manage plus you will be competitive by offering <strong>thousands of casino games</strong>. Our staff will assist you in all phases from initial training to production start-up.</p>
+      <p>The marketing team will ensure that your online casino is featured on the front page and we guarantee you high visibility online.</p>
+      <p>The online casino platform will be delivered with ready-to-use games moreover the monitoring tools will give you a clear view of the progress of your new business.</p>
+      <p>&nbsp;</p>
+   
+      
+          </div>
+        </div>
 
         <h3 class="online-casino-em">
           <em style="font-family: 'Raleway', sans-serif"
@@ -62,9 +55,8 @@
         <h1 class="col1-head">Live Casino Software<br /></h1>
         <p class="col1-para">
           The world’s best selection of leading
-          <strong>Live Casino providers</strong>
-       
-        <p class="col1-para">
+          <strong>Live Casino providers</strong><br></p>
+          <p>
           The widest selection of live tables online and multi-channel
           delivery.
         </p>
