--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -90,7 +90,7 @@ font-size: 18px;
   color: #a0c528;
     }
     .footer_para p a:hover{
-        color: #0000;
+        color: #fff;
         text-decoration: none;
           }
 .footer_para{
