--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -4,7 +4,7 @@
     <div class="first-head">
       <h1>White Label Betting Platform</h1>
       <div class="home">
-        <a href="/index.html">Home</a> <span class="dash">-</span>
+        <a href="/index.html" class="dash">Home -</a> 
         <span class="lil-para">White Label Betting Platform</span>
       </div>
     </div>
@@ -73,7 +73,7 @@
 
       <div class="head-custom">
         <h1 class="bottom-marg letter-spacing font-weight">Customizations</h1>
-        <h2 style="font-size: 34px;color: #000000;line-height: 34px;text-align: left">Be unique</h2>
+        <h2 class="sec-header">Be unique</h2>
         <p>
           <b class="bold">Vrnl’s consultants will collect your requirements</b> and show
           you several templates and recent development works: all the
@@ -98,7 +98,7 @@
     <div class="plat-odd">
       <div class="plat-oddhead">
         <h1 class="bottom-marg letter-spacing font-weight">Odds</h1>
-        <h2 style="font-size: 34px;color: #000000;line-height: 34px;text-align: left">The engine of the platform</h2>
+        <h2 class="sec-header">The engine of the platform</h2>
         <p>
           We have already
           <b class="bold">integrated the best odds providers in the world</b> and if that’s
@@ -139,14 +139,22 @@
       </div>
       <div class="toolhead">
         <h1 class="bottom-marg letter-spacing font-weight">Marketing tools</h1>
-        <h2 style="font-size: 34px;color: #000000;line-height: 34px;text-align: left">Bonus and Promotions</h2>
+        <h2 class="sec-header">Bonus and Promotions</h2>
         <p>
           <b class="bold">The acquisition of new players is a key point</b>, Vrnl
           provides various tools depending on the goal to be achieved. We have
           simplified the management of affiliations and our bonus engine
           allows you to be competitive in the market.
         </p>
-    
+        <div
+        class="niva-separator1"
+        style="
+          height: 4px;
+          background: #a0c528;
+          width: 60px;
+          border-radius: 5px;
+        "
+      ></div>
       </div>
     </div>
 
