--- a/src/app/whitelabel/whitelabel.component.css
+++ b/src/app/whitelabel/whitelabel.component.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 body {
     font-family: Poppins;
 }
@@ -16,6 +15,13 @@ body {
 } */
 .white-label{
     padding: 80px 0px;
+    
+}
+.sec-header{
+    font-size: 34px;
+    color: #000000;
+    line-height: 34px;
+    text-align: left;
 }
 @media screen and (max-width: 820px){
     .white_label_imgs{
@@ -34,21 +40,7 @@ body {
     font-family: Poppins !important;
     /* padding: 80px 0; */
 }
-@media (max-width: 1200px){
-.containt {
-    width: 1170px;
-}
-}
-@media (max-width: 992px){
-.containt {
-    width: 970px;
-}
-}
-@media (max-width: 768px){
-.containt {
-    width: 750px;
-}
-}
+
 .bold{
     font-weight: 900;
     color: #000;
@@ -110,4 +102,114 @@ h2 {
 .font-weight{
     font-weight: 600;
     font-family: Poppins;
+}
+
+
+/* media Quary */
+@media (max-width: 1200px){
+    .containt {
+        width: 1170px;
+    }
+}
+
+
+@media (max-width: 992px){
+    .containt {
+        width: 818px;
+    }
+    .cutom-main {
+        justify-content: left;
+        gap: 0px;
+    }
+    .white_label_imgs {
+        width: 455px;
+        height: 296px;
+    }
+    .label-para p{
+        font-size: 20px;
+        line-height: 2;
+    }
+    .label-list-para{
+        margin-left: 38px;
+        margin-top: 0px;
+    }
+    .head-custom h1,.sec-header{
+        font-size: 28px;
+    }
+    .sec-header{
+        font-weight: 100px;
+    }
+    p{
+        font-size: 20px;
+        line-height: 1.7;
+    }
+    .head-custom{
+        letter-spacing: 1px;
+    }
+}
+
+
+@media (max-width: 768px){
+    .containt {
+        width: 368px;
+    }
+    .first-head h1 {
+    font-size: 30px;
+    letter-spacing: 1.5px;
+    }
+    .first-sec {
+        height: 284px;
+        padding: 72px 0 65px !important;
+    }
+    .home{
+        font-size: 18px;
+        font-weight: 400;
+        display: grid;
+    }
+    .dash{
+        padding-bottom: 10px;
+    }
+    .lil-para {
+        letter-spacing: .5px;
+    }
+    .white-label{
+        padding: 0;
+    }
+    .label-list-para{
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    .head-custom h1{
+        font-size: 30px;
+    }
+    .sec-header{
+        font-size: 22px;
+    }
+    .niva-separator1{
+        margin-left: 15px;
+    }
+    .plat-odd{
+        margin-top: 0px !important;
+    }
+    .plat-oddhead{
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    .tools {
+        margin-top: 0px;
+    }
+
+}
+
+
+@media (max-width: 280px){
+    .containt {
+        width: 280px;
+    }
+    .head-custom h1{
+        font-size: 30px;
+    }
+    .sec-header{
+        font-size: 22px;
+    }
 }
