--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
 * {
     margin: 0px;
     padding:0px;
-    font-family: 'Poppins' !important;
+    /* font-family: 'Poppins' !important; */
 }
 
 body{
