--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -28,7 +28,14 @@
         </div>
       </div>
     </div>
+
     <div class="contact_col_1">
+      <div class="wpb_wrapper">
+        <h4 class="x-text-content-text-primary" style="font-size: 18px;
+        font-weight: bolder;
+    ">JUST WRITE US A MESSAGE</h4>
+  
+      </div>
       <div class="contact_card">
         <form #contactForm="ngForm" (ngSubmit)="onSubmit(contactForm)" novalidate>
           <div class="name_label">
