--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -1,7 +1,7 @@
 
 <app-header2></app-header2>
 
-
+<div class="content">
 <section class="container6">
     <div class="index2-row">
         <div class="index2-col">
@@ -156,7 +156,7 @@
 
 </div>
 </section>
-
+</div>
 <app-contact-component2></app-contact-component2>
 
 
