--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -1,31 +1,32 @@
 <app-header></app-header>
-<div class="content">
-<section class="container1">
+<div class="content vc_row">
+  <section class="container1">
     <div class="container1_row">
       <div class="online-casino_col">
-        <h1
-          class="online-casino_header"
-          style="font-family: 'Raleway', sans-serif"
-        >
+        <h1 class="online-casino_header" style="font-family: 'Raleway', sans-serif">
           Online Casino Software
         </h1>
         <div class="wpb_text_column wpb_content_element  vc_custom_1673977594688">
           <div class="wpb_wrapper">
-            <p>The <strong>online casino software</strong> is simple as our platform is easy to manage plus you will be competitive by offering <strong>thousands of casino games</strong>. Our staff will assist you in all phases from initial training to production start-up.</p>
-      <p>The marketing team will ensure that your online casino is featured on the front page and we guarantee you high visibility online.</p>
-      <p>The online casino platform will be delivered with ready-to-use games moreover the monitoring tools will give you a clear view of the progress of your new business.</p>
-      <p>&nbsp;</p>
-   
-      
+            <p>The <strong>online casino software</strong> is simple as our platform is easy to manage plus you will be
+              competitive by offering <strong>thousands of casino games</strong>. Our staff will assist you in all
+              phases from initial training to production start-up.</p>
+            <p>The marketing team will ensure that your online casino is featured on the front page and we guarantee you
+              high visibility online.</p>
+            <p>The online casino platform will be delivered with ready-to-use games moreover the monitoring tools will
+              give you a clear view of the progress of your new business.</p>
+            <p>&nbsp;</p>
+
+
           </div>
         </div>
 
         <h3 class="online-casino-em">
-          <em style="font-family: 'Raleway', sans-serif"
-            >This is a theme and can be customized, see it in action:</em
-          >
+          <em style="font-family: 'Raleway', sans-serif">This is a theme and can be customized, see it in action:</em>
         </h3>
-        <a class="online-casino-link" href="https://babu365.com/" target="_blank"><p>https://babu365.com/</p></a>
+        <a class="online-casino-link" href="https://babu365.com/" target="_blank">
+          <p>https://babu365.com/</p>
+        </a>
 
         <br />
         <button class="online-casino-button">
@@ -36,13 +37,7 @@
       <div class="online-casino_col_2">
         <img src="assets/online-casino-providers-1.jpg.webp" />
         <div class="online-casino-youtube">
-          <a href="#"
-            ><img
-              class="youtube_img"
-              src="assets/play.png.webp"
-              width="520"
-              height="280"
-          /></a>
+          <a href="#"><img class="youtube_img" src="assets/play.png.webp" width="520" height="280" /></a>
         </div>
       </div>
     </div>
@@ -55,8 +50,9 @@
         <h1 class="col1-head">Live Casino Software<br /></h1>
         <p class="col1-para">
           The world’s best selection of leading
-          <strong>Live Casino providers</strong><br></p>
-          <p>
+          <strong>Live Casino providers</strong><br>
+        </p>
+        <p>
           The widest selection of live tables online and multi-channel
           delivery.
         </p>
@@ -115,16 +111,13 @@
           more than 30,000 games.
         </p>
 
-        <div
-          class="seprator"
-          style="
+        <div class="seprator" style="
             height: 4px;
             width: 60px;
             border-radius: 5px;
             background: #a0c528;
             margin-top: 30px;
-          "
-        ></div>
+          "></div>
       </div>
     </div>
   </section>
@@ -187,7 +180,7 @@
 
   <section class="container5">
     <div class="container5-row">
-      
+
 
       <div class="container5-col2">
         <h1>
@@ -283,7 +276,7 @@
       </section>
    -->
 
-   <app-contact-com></app-contact-com>
+  <app-contact-com></app-contact-com>
 
 
   <!-- ================FREQ ASK QUE STARTS=============== -->
@@ -318,7 +311,7 @@
           Vrnl casino white label, will offer certified and secure casino
           games. Vrnl Casino white label allows you to customize the casino
           based on<br />
-          your favourite language and currency.<br/><br /><br />
+          your favourite language and currency.<br /><br /><br />
         </p>
 
         <h3>What do we offer as casino software provider?</h3>
@@ -353,40 +346,23 @@
           Indeed, there are 5 different levels on the sports betting software
           network that is accessible:
         </p>
-        <ul class="user_list">
-          <li>Platform Administrator Level</li>
-          <p>
-            This level is the admittance to the backend. Likewise, it makes
-            different gets to the Administrative center with restricted honors
-            and permissions<br />
-            is additionally conceivable).
-          </p>
-
-          <li>Reseller Level</li>
-          <p>
-            This level is for expert-agent managing numerous betting shops. As
-            a result, there are commission benefits on the shop’s turnover or
-            Earns.
-          </p>
-
-          <li>Betting Shop Level</li>
-          <p>
-            This level refers to the actual place where players can play,
-            deposit, and so forth. Through this record, it is feasible to put
-            down bets and procure commission on turnover or profits.
-          </p>
-
-          <li>Cashier Level</li>
-          <p>
-            This level suitably describes betting shops’ representatives,
-            ready to engage bets without acquiring any commissions.
-          </p>
-
-          <li>Online player Level</li>
-          <p>
-            This level denotes players who have an account by registering at
-            the betting game online or at a shop, and also place bets.<br /><br /><br />
-          </p>
+        <ul>
+          <li><span style="color: #000000;"><strong>Platform Administrator Level</strong></span><br>
+            <span style="color: #000000;">This level is the admittance to the backend. Likewise, it makes different gets
+              to the Administrative center with restricted honors and permissions is additionally conceivable).</span>
+          </li>
+          <li><span style="color: #000000;"><strong>Reseller Level<br>
+              </strong>This level is for expert-agent managing numerous betting shops. As a result, there are commission
+              benefits on the shop’s turnover or Earns.</span></li>
+          <li><span style="color: #000000;"><strong>Betting Shop Level<br>
+              </strong>This level refers to the actual place where players can play, deposit, and so forth. Through this
+              record, it is feasible to put down bets and procure commission on turnover or profits.</span></li>
+          <li><span style="color: #000000;"><strong>Cashier Level<br>
+              </strong>This level suitably describes betting shops’ representatives, ready to engage bets without
+              acquiring any commissions.</span></li>
+          <li><span style="color: #000000;"><strong>Online player Level<br>
+              </strong>This level denotes players who have an account by registering at the betting game online or at a
+              shop, and also place bets.</span></li>
         </ul>
 
         <h3>Can a network of shops/players participate in migration?</h3>
