--- a/src/app/live-casino/live-casino.component.css
+++ b/src/app/live-casino/live-casino.component.css
@@ -1992,8 +1992,11 @@ width: 45%;
     margin-right: 5%;
     margin-top: 5%; 
     line-height: 1.8;
+    font-size: 1rem;
+    font-weight: 300;
+    color: rgb(87,87,86);
+    font-family: "Raleway",sans-serif !important;
 }
-
 
 
 .index2-col2{
@@ -2031,15 +2034,15 @@ width: 45%;
 .index2-col-para p{
     line-height: 4;
 }
-
-
-
+strong{
+  font-weight: bold;
+}
 .demo-live{
     font-size: 35px;
     text-align: center;
     font-family:'Raleway', sans-serif;
     
-    color: #000000;
+    color: #272727;
 }
 
 .demo-link{
@@ -2146,7 +2149,7 @@ margin-left: 164px;
 .table-content1 p{
     /* padding: 1px 75px 0px 7px; */
     line-height: 1.9;
-    
+    border-bottom: 1px solid #f2f2f2;
 }
 
 
@@ -2298,7 +2301,7 @@ margin-top: 2%;
 }
 .container7{
     padding-top: 80px;
-    padding-bottom: 85px;
+    padding-bottom: 130px;
 
 }
 .btns_lives_sec{
@@ -2310,7 +2313,7 @@ padding: 9px;
     border-radius: 5px;
     box-shadow: 0em 0.15em 0.65em 0em rgba(0,0,0,0.25);
     background-color: rgba(255,255,255,1);
-    width: 135px;
+    width: 130px;
     color: #000;
 }
 /* <!------LIVE CASINO end HERE-------> */
@@ -3062,7 +3065,12 @@ font-size: 45px;
 .freq_question_col{
   padding: 71px;
 }
-
+.index2-rowp{
+  font-size: 1rem;
+  font-weight: 300;
+  color: rgb(87,87,86);
+  font-family: "Raleway",sans-serif !important;
+}
 
 @media screen and (max-width: 820px) {
 
