--- a/src/app/online-casino-software/online-casino-software.component.css
+++ b/src/app/online-casino-software/online-casino-software.component.css
@@ -110,3 +110,14 @@ background-color: #a0c528;
     width: 750px;
 }
 }
+.vc_row {
+    margin-left: -15px;
+    margin-right: -15px;
+}
+ol, ul {
+    padding-left: 30px;
+    font-size: 16px;
+    color: #686868;
+    line-height: 30px;
+    font-weight: 400;
+}
